--- a/src/scenes/view/images/ShowAllPokemon.css
+++ b/src/scenes/view/images/ShowAllPokemon.css
@@ -13,9 +13,18 @@
     -fx-effect: dropshadow(three-pass-box, rgba(255, 255, 255, 0.6), 5, 0.0, 0, 2);
 }
 
+#pane3 {
+    -fx-background-color: rgba(255, 255, 255, .3);
+    -fx-effect: dropshadow(three-pass-box, rgba(255, 255, 255, 0.6), 5, 0.0, 0, 2);
+}
+
 #paneHelp {
     -fx-background-color: rgba(255, 255, 255, .8);
     -fx-effect: dropshadow(three-pass-box, rgba(255, 255, 255, 0.6), 5, 0.0, 0, 2);
+}
+
+#txtSearch {
+    -fx-font: 17px Garamond;
 }
 
 #listView {
@@ -36,6 +45,12 @@
     -fx-font-weight: bold;
 }
 
+#ttType {
+    -fx-font: 17px Garamond;
+    -fx-show-duration: 60s;
+    -fx-show-delay: 0s;
+}
+
 #lblType {
     -fx-font: 20px Garamond;
 }
@@ -43,6 +58,12 @@
 #labelID {
     -fx-font: 30px Garamond;
     -fx-font-weight: bold;
+}
+
+#ttID {
+    -fx-font: 17px Garamond;
+    -fx-show-duration: 60s;
+    -fx-show-delay: 0s;
 }
 
 #lblID {
@@ -54,6 +75,12 @@
     -fx-font-weight: bold;
 }
 
+#ttHP {
+    -fx-font: 17px Garamond;
+    -fx-show-duration: 60s;
+    -fx-show-delay: 0s;
+}
+
 #lblHP {
     -fx-font: 20px Garamond;
 }
@@ -61,6 +88,12 @@
 #labelAttack {
     -fx-font: 30px Garamond;
     -fx-font-weight: bold;
+}
+
+#ttAttack {
+    -fx-font: 17px Garamond;
+    -fx-show-duration: 60s;
+    -fx-show-delay: 0s;
 }
 
 #lblAtk {
@@ -72,6 +105,12 @@
     -fx-font-weight: bold;
 }
 
+#ttSpeed {
+    -fx-font: 17px Garamond;
+    -fx-show-duration: 60s;
+    -fx-show-delay: 0s;
+}
+
 #lblSpeed {
     -fx-font: 20px Garamond;
 }
@@ -79,6 +118,12 @@
 #labelDefence {
     -fx-font: 30px Garamond;
     -fx-font-weight: bold;
+}
+
+#ttDefence {
+    -fx-font: 17px Garamond;
+    -fx-show-duration: 60s;
+    -fx-show-delay: 0s;
 }
 
 #lblDf {
@@ -94,9 +139,29 @@
     -fx-font: 20px Garamond;
 }
 
+#lblCurrencyTitle {
+    -fx-font: 30px Garamond;
+    -fx-font-weight: bold;
+}
+
+#lblCurrency {
+    -fx-font: 20px Garamond;
+}
+
 
 #lblNickname {
     -fx-font: 30px Garamond;
+}
+
+#btnSearch {
+    -fx-font: 15px Garamond;
+    -fx-font-weight: bold;
+    -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.6), 5, 0.0, 0, 1);
+}
+
+#btnSearch:hover {
+    -fx-background-color: white;
+    -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, 0.6), 5, 0.0, 0, 1);
 }
 
 #btnNoNickname {
