--- a/src/scenes/view/TrainerCollection.fxml
+++ b/src/scenes/view/TrainerCollection.fxml
@@ -10,19 +10,19 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="trainerCollectionAnc" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1200.0" stylesheets="@images/TrainerCollection.css" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="scenes.controller.TrainerCollectionController">
+<AnchorPane fx:id="trainerCollectionAnc" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1200.0" stylesheets="@images/TrainerCollection.css" xmlns="http://javafx.com/javafx/10.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="scenes.controller.TrainerCollectionController">
     <children>
         <Pane fx:id="pane1" layoutX="30.0" layoutY="12.0" prefHeight="429.0" prefWidth="255.0">
             <children>
                 <Label fx:id="labelMyCollection" layoutX="41.0" layoutY="14.0" text="My collection" />
                 <Button fx:id="btnSelect1" blendMode="MULTIPLY" layoutX="89.0" layoutY="376.0" mnemonicParsing="false" onAction="#showSelectedCollection" text="Select" />
-                <ListView fx:id="listCollection" layoutX="10.0" layoutY="61.0" prefHeight="307.0" prefWidth="235.0" />
+                <ListView fx:id="listCollection" layoutX="10.0" layoutY="61.0" onMouseClicked="#showSelectedCollection" prefHeight="307.0" prefWidth="235.0" />
             </children>
         </Pane>
         <Pane fx:id="pane2" layoutX="920.0" layoutY="12.0" prefHeight="429.0" prefWidth="255.0">
             <children>
                 <Label fx:id="labelMyTeam" layoutX="71.0" layoutY="14.0" text="My team" />
-                <ListView fx:id="listTeam" layoutX="10.0" layoutY="61.0" prefHeight="307.0" prefWidth="235.0" />
+                <ListView fx:id="listTeam" layoutX="10.0" layoutY="61.0" onMouseClicked="#showSelectedTeam" prefHeight="307.0" prefWidth="235.0" />
                 <Button fx:id="btnSelect2" layoutX="18.0" layoutY="376.0" mnemonicParsing="false" onAction="#showSelectedTeam" text="Select" />
             <Button fx:id="btnRemove" layoutX="147.0" layoutY="376.0" mnemonicParsing="false" onAction="#removeTeam" text="Remove" />
             </children>
