--- a/src/scenes/view/ShowAllPokemon.fxml
+++ b/src/scenes/view/ShowAllPokemon.fxml
@@ -115,6 +115,7 @@
             </Label>
             <Label fx:id="lblPrice" layoutX="227.0" layoutY="622.0" text="0" />
             <TextField fx:id="txtPrice" layoutX="224.0" layoutY="623.0" prefHeight="25.0" prefWidth="104.0" />
+            <Button fx:id="btnUpdate" layoutX="205.0" layoutY="669.0" mnemonicParsing="false" onAction="#updatePokemon" text="Update" />
             </children>
         </Pane>
         <Button fx:id="btnBuy" blendMode="MULTIPLY" layoutX="217.0" layoutY="714.0" mnemonicParsing="false" onAction="#reArrangeScene" prefHeight="60.0" prefWidth="183.0" text="Catch Pokémon!" />
